<resources>
    <string name="app_name">PersonalTasks</string>
    <string name="titulo">Titulo</string>
    <string name="descricao">Descrição</string>
    <string name="data">Data</string>
    <string name="salvar">Salvar</string>
    <string name="remover">Remover</string>
    <string name="editar">Editar</string>
    <string name="adicionar_task">Adicionar task</string>
    <string name="task_list">Lista de Tasks</string>
    <string name="visualizar">Visualizar</string>
    <string name="voltar">Voltar</string>
    <string name="cancelar">Cancelar</string>
    <string name="nenhuma_tarefa_por_aqui_ainda">Nenhuma tarefa por aqui ainda...</string>
    <string name="todo">TODO</string>
    <string name="concluida">Concluida</string>

    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="registrar">Registrar</string>
    <string name="tarefas_excluidas">Lixeira</string>
    <string name="sair">Sair</string>
    <string name="reativar_tarefa">Reativar tarefa</string>
    <string name="detalhes">Detalhes</string>

    <string name="desenvolvido_por_ana_livia">Desenvolvido por Ana Lívia</string>
    <string name="vers_o_1_0">Versão 1.0</string>
    <string name="dado">Dado</string>
    <string name="discar">Discar</string>
    <string name="navegador">Navegador</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="map">Mapa</string>
    <string name="tarefas">Tarefas</string>
    <string name="sobre">Sobre</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="tarefas_exclu_das">Tarefas excluídas</string>
    <string name="nenhuma_tarefa_na_lixeira">Nenhuma tarefa na lixeira.</string>
    <string name="filtrar_por_data">Filtrar por data</string>
    <string name="n_o_definida">Não definida</string>
    <string name="data_de_in_cio">Data de Início</string>
    <string name="data_de_fim">Data de Fim</string>
    <string name="deletar_permanentemente">Deletar permanentemente</string>
    <string name="prioridade">Prioridade</string>
    <string name="m_dia">Média</string>
    <string name="alta">Alta</string>

</resources>
