<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/pesquisar"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/action_filter_by_date"
        android:title="@string/filtrar_por_data"
        android:icon="@android:drawable/ic_menu_my_calendar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/deleted_tasks_mi"
        android:title="@string/tarefas_exclu_das"
        app:showAsAction="never"/>
    <item
        android:id="@+id/logout_mi"
        android:title="@string/sair"
        app:showAsAction="never"/>
</menu>