<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AboutActivity">

    <include
        android:id="@+id/toolbar_in"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        layout="@layout/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/desenvolvido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desenvolvido_por_ana_livia"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/versao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vers_o_1_0"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/desenvolvido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/dadoParaEnviarEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:hint="@string/dado"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/versao"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/discarBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discar"
        app:layout_constraintTop_toBottomOf="@id/dadoParaEnviarEt"
        app:layout_constraintStart_toStartOf="parent"/>
    <Button
        android:id="@+id/navegadorBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navegador"
        app:layout_constraintTop_toBottomOf="@id/discarBtn"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/compartilharBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compartilhar"
        app:layout_constraintTop_toBottomOf="@id/navegadorBtn"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/mapBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map"
        app:layout_constraintTop_toBottomOf="@id/compartilharBtn"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/cancelar_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        app:layout_constraintTop_toBottomOf="@id/mapBtn"
        app:layout_constraintStart_toStartOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>